--- a/style/styles.css
+++ b/style/styles.css
@@ -377,6 +377,9 @@ table {
   .main_photo-settings {
     height: 80%;
   }
+  .main_sponsored {
+    line-height: 12px;
+  }
 }
 @media (max-width: 750px) {
   .main_photo-settings {
@@ -384,5 +387,51 @@ table {
   }
   .main_text {
     display: none;
+  }
+}
+@media (min-width: 322px) {
+  .main_photo-320px {
+    display: none;
+  }
+}
+@media (max-width: 321px) {
+  .wrapper {
+    max-width: 280px;
+  }
+  .hamburger {
+    right: 20px;
+  }
+  .main_photo-320px {
+    display: flex;
+    justify-content: center;
+  }
+  .main_photo {
+    display: none;
+  }
+  .main_name {
+    font-size: 18px;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: 60px;
+  }
+  .main_buttons {
+    justify-content: space-between;
+  }
+  .main_sponsored {
+    display: block;
+  }
+  .main_sponsored-text {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  .main_sponsored-link {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+  .main_sponsored-img {
+    width: auto;
+    height: 18px;
   }
 }/*# sourceMappingURL=styles.css.map */
