--- a/style/styles.css
+++ b/style/styles.css
@@ -381,7 +381,7 @@ table {
     line-height: 12px;
   }
 }
-@media (max-width: 750px) {
+@media (max-width: 749px) {
   .main_photo-settings {
     width: 70%;
   }
@@ -389,14 +389,69 @@ table {
     display: none;
   }
 }
-@media (min-width: 322px) {
+@media (min-width: 749px) {
   .main_photo-320px {
     display: none;
+  }
+}
+@media (max-width: 749px) {
+  .wrapper {
+    max-width: 600px;
+  }
+  .hamburger {
+    right: 20px;
+  }
+  .main_photo-320px {
+    display: flex;
+    justify-content: center;
+  }
+  .main_photo {
+    display: none;
+  }
+  .main_name {
+    font-size: 26px;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: 60px;
+  }
+  .main_buttons {
+    justify-content: space-between;
+  }
+  .main_sponsored {
+    display: block;
+  }
+  .main_sponsored-text {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  .main_sponsored-link {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+  .main_sponsored-img {
+    width: auto;
+    height: 18px;
+  }
+  .main_photo-settings {
+    width: 40%;
+  }
+}
+@media (max-width: 551px) {
+  .main_name {
+    font-size: 20px;
+  }
+  .main_photo-settings {
+    width: 45%;
   }
 }
 @media (max-width: 321px) {
   .wrapper {
     max-width: 280px;
+  }
+  .main_photo-settings {
+    width: 70%;
   }
   .hamburger {
     right: 20px;
