--- a/style/_cfeatures.scss
+++ b/style/_cfeatures.scss
@@ -1,3 +1,4 @@
+
 .corefeatures {
   display: flex;
   padding: 0% 8%;
@@ -9,6 +10,7 @@
   box-shadow: 0px 8px 24px rgba(69, 88, 157, 0.07);
   border-radius: 24px;
   height: 140px;
+  font-family: $main-font;
 }
 .corefeatures_main {
   margin-left: 9%;
@@ -103,15 +105,15 @@
   }
   .corefeatures_descr {
     font-size: 18px;
-}
-.corefeatures_card {
+  }
+  .corefeatures_card {
     flex-direction: column;
     height: 215px;
-}
-.corefeatures_card-img {
+  }
+  .corefeatures_card-img {
     text-align: center;
-}
-.corefeatures_card-text {
+  }
+  .corefeatures_card-text {
     text-align: center;
-}
+  }
 }
