--- a/style/styles.css
+++ b/style/styles.css
@@ -1117,7 +1117,7 @@ table {
     margin-bottom: 10px;
   }
   .functions {
-    height: 1300px;
+    height: 1340px;
   }
   #numberOne, #numberSecond, #numberThird, #numberFour {
     background-size: 40%;
@@ -1127,4 +1127,33 @@ table {
   .functions_card {
     padding: 20px;
   }
+}
+.feedback {
+  margin-top: 5%;
+}
+
+.feedback_title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 2.1px;
+  text-transform: uppercase;
+  color: #244886;
+}
+
+.feedback_decsr {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 55px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: -1.5px;
+  color: #0f2137;
+  justify-content: center;
+}
+
+.feedback_slider {
+  margin-top: 5%;
 }/*# sourceMappingURL=styles.css.map */
