--- a/style/_header.scss
+++ b/style/_header.scss
@@ -56,7 +56,7 @@
   margin-right: 50px;
 }
 
-.container {
+.containers {
   background-image: url(../images/background_main.png);
   background-repeat: no-repeat;
   background-size: cover;
