--- a/style/styles.css
+++ b/style/styles.css
@@ -154,7 +154,7 @@ table {
   margin-right: 50px;
 }
 
-.container {
+.containers {
   background-image: url(../images/background_main.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -1156,4 +1156,186 @@ table {
 
 .feedback_slider {
   margin-top: 5%;
+}
+
+#testimonial_area {
+  padding: 10% 0;
+}
+
+.box-area {
+  padding: 30px;
+  position: relative;
+  display: block;
+  background: #fff;
+  color: #000;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 40px 20px;
+}
+
+.box-area h5 {
+  font-size: 16px;
+  font-weight: 700;
+  color: #0a69ed;
+  margin-top: 30px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.box-area span {
+  color: #262626;
+  display: block;
+  font-size: 13px;
+  margin: 0 0 10px;
+  font-weight: 400;
+}
+
+.box-area .content {
+  color: #262626;
+}
+
+.box-area .img-area {
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  top: -40px;
+  left: 0;
+  bottom: 0;
+  margin: 0 auto;
+  right: 0;
+  z-index: 1;
+  border: 5px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
+}
+
+.box-area .img-area img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+}
+
+.socials {
+  margin-top: 30px;
+}
+
+.socials i {
+  margin: 0 10px;
+  color: #0a69ed;
+  font-size: 18px;
+}
+
+#testimonial_area .owl-nav {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+}
+
+#testimonial_area .owl-prev,
+#testimonial_area .owl-next {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: #0a69ed;
+  border-radius: 50%;
+  text-align: center;
+  background: #fff;
+  position: absolute;
+}
+
+#testimonial_area .owl-prev {
+  left: -60px;
+  top: -30px;
+}
+
+#testimonial_area .owl-next {
+  right: -60px;
+  top: -30px;
+}
+
+.rate {
+  display: flex;
+  width: 15px;
+}
+
+.rate-img {
+  width: 15px;
+  height: 15px;
+}
+
+.area-title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 33px;
+  display: flex;
+  align-items: center;
+  color: #343d48;
+}
+
+.area-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 38px;
+  color: #343d48;
+  text-align: initial;
+}
+
+.area-user {
+  display: flex;
+}
+
+.area-img {
+  display: flex;
+  align-items: center;
+}
+
+.user-img {
+  width: 55px;
+  height: 55px;
+}
+
+.area-user-name {
+  margin-left: 5%;
+}
+
+.user-name {
+  font-weight: 700;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.4px;
+  color: #0f2137;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+
+.user-link {
+  font-weight: 500;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.375px;
+  color: #25a0ff;
+}
+
+.container-own {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media only screen and (max-width: 991px) {
+  .owl-nav {
+    display: none;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .box-area {
+    text-align: center;
+  }
+  .owl-nav {
+    display: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
