--- a/style/styles.css
+++ b/style/styles.css
@@ -390,7 +390,7 @@ table {
     width: 100%;
   }
   .container {
-    height: 800px;
+    height: 430px;
   }
 }
 @media (max-width: 1025px) {
@@ -869,20 +869,19 @@ table {
 }
 
 .wfeatures_button {
-  background: #1f3e76;
+  margin-top: 15px;
   border-radius: 50px;
   width: 150px;
   height: 50px;
-  border: 1px solid #1f3e76;
 }
 .wfeatures_button :hover {
-  color: #1f3e76;
-  background-color: white;
-  border-radius: 50px;
+  background-color: #ffffff;
   transition: 0.7s;
+  text-decoration: none;
 }
 
 .wfeatures_button-set {
+  border-radius: 50px;
   display: flex;
   justify-content: center;
   font-weight: 500;
@@ -891,11 +890,12 @@ table {
   letter-spacing: -0.16px;
   text-decoration: none;
   color: #ffffff;
-  height: 50px;
   align-items: center;
+  background: #1f3e76;
+  border: 1px solid #1f3e76;
 }
 
-.wfeatures_imgside-840px {
+.wfeatures_imgside-img-840px {
   display: none;
 }
 
@@ -948,7 +948,11 @@ table {
   }
   .wfeatures_button-set {
     font-size: 14px;
-    height: 35px;
+    height: 30px;
+  }
+  .wfeatures_button {
+    width: 110px;
+    height: 30px;
   }
 }
 .functions {
@@ -1229,7 +1233,7 @@ table {
 #testimonial_area .owl-nav {
   position: absolute;
   top: 50%;
-  width: 100%;
+  width: 98%;
 }
 
 #testimonial_area .owl-prev,
@@ -1338,5 +1342,173 @@ table {
   }
   .owl-nav {
     display: none;
+  }
+}
+.secure {
+  margin: 0 auto;
+  height: 940px;
+  background-image: url(../images/secure/Secure-img.svg);
+  background-repeat: no-repeat;
+  width: 75%;
+  max-width: 1316px;
+}
+.secure .secure-main {
+  display: flex;
+}
+
+.secure-image {
+  padding-top: 130px;
+}
+
+.secure-image-set {
+  width: 100%;
+  max-width: 742px;
+}
+
+.secure-image-dubl {
+  margin-left: 35%;
+}
+
+.secure-image-set-dubl {
+  width: 50%;
+}
+
+.secure-text {
+  padding-top: 140px;
+  padding-left: 105px;
+  width: 30%;
+}
+
+.secure_title {
+  align-items: center;
+  letter-spacing: 2.1px;
+  text-transform: uppercase;
+  color: #244886;
+  font-weight: 700;
+  font-size: 14px;
+  margin-top: 10%;
+  margin-bottom: 3%;
+}
+
+.secure_descr {
+  align-items: center;
+  letter-spacing: -1.5px;
+  font-weight: 700;
+  font-size: 48px;
+  color: #0f2137;
+  margin-bottom: 24px;
+}
+
+.secure_text-descr {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 42px;
+  color: #02073e;
+}
+
+.secure_button-set {
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.16px;
+  text-decoration: none;
+  color: #ffffff;
+  height: 50px;
+  align-items: center;
+}
+
+.secure_button {
+  margin-top: 15px;
+  border-radius: 50px;
+  width: 150px;
+  height: 50px;
+}
+.secure_button :hover {
+  background-color: #ffffff;
+  transition: 0.7s;
+  text-decoration: none;
+}
+
+.secure_button-set {
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.16px;
+  text-decoration: none;
+  color: #ffffff;
+  height: 50px;
+  align-items: center;
+  background: #1f3e76;
+  border: 1px solid #1f3e76;
+}
+
+@media (max-width: 1490px) {
+  .secure-text {
+    padding-left: 25px;
+  }
+}
+@media (max-width: 1290px) {
+  .secure-image-set {
+    max-width: 520px;
+  }
+  .secure_descr {
+    font-size: 38px;
+    margin-bottom: 34px;
+  }
+  .secure {
+    height: 800px;
+  }
+}
+@media (min-width: 1026px) {
+  .secure-image-dubl {
+    display: none;
+  }
+}
+@media (max-width: 1025px) {
+  .secure {
+    background-image: none;
+  }
+  .secure-main {
+    justify-content: center;
+  }
+  .secure-image {
+    display: none;
+  }
+  .secure-text {
+    width: 100%;
+    padding: 0;
+  }
+  .secure_title {
+    text-align: center;
+  }
+  .secure_descr {
+    text-align: center;
+  }
+  .secure_button {
+    margin: 0 auto;
+  }
+  .secure-image-dubl {
+    display: block;
+  }
+}
+@media (max-width: 845px) {
+  .secure_descr {
+    font-size: 25px;
+  }
+  .secure_text-descr {
+    text-align: center;
+  }
+  .secure_button {
+    margin-top: 10px;
+    width: 110px;
+    height: 30px;
+  }
+  .secure_button-set {
+    height: 30px;
   }
 }/*# sourceMappingURL=styles.css.map */
